--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Music</title>
+        <title>Formating</title>
     </head>
     <body>
-        <p>Arctic Monkeys - 505</p>
-        <audio controls autoplay muted loop>
-            <source src="music/Arctic Monkeys - 505.mp3" type="audio/mpeg">
-        </audio>
+        <p>This is normal text</p>
+        <p>This is <b>bolt</b> text</p>
+        <p>This is <i>italic</i> text</p>
+        <p>This is <u>underline</u> text</p>
+        <p>This is <del>deleted</del> text</p>
+        <p>This is <big>big</big> text</p>
+        <p>This is <small>small</small> text</p>
+        <p>This is <sub>subscript</sub> text</p>
+        <p>This is <sup>superscript</sup> text</p>
+        <p>This is <tt>monospaced</tt> text</p>
+        <p>This is <mark style="background-color:aquamarine">marked</mark> text</p>
     </body>
+
 </html>
